--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -65,7 +65,7 @@
 
   <!-- PAGINATION -->
   <mat-paginator
-    [length]="dataSource.data.length"
+    [length]="filteredData.length"
     [pageSize]="pageSize"
     [pageIndex]="pageIndex"
     [pageSizeOptions]="[5, 10, 20]"
