--- a/src/app/livestock/livestock-list/livestock-list.html
+++ b/src/app/livestock/livestock-list/livestock-list.html
@@ -61,7 +61,7 @@
   </div>
 
   <mat-paginator
-    [length]="dataSource.data.length"
+    [length]="filteredData.length"
     [pageSize]="pageSize"
     [pageIndex]="pageIndex"
     [pageSizeOptions]="[5, 10, 20]"
