add farmer field in scheduling to help user filter for animal

--- a/src/app/livestock/livestock-list/livestock-list.html
+++ b/src/app/livestock/livestock-list/livestock-list.html
@@ -41,11 +41,11 @@
         <div class="row"><span class="label">Breed</span>
             <span class="value">{{ getBreedName(item.breed) }}</span>
         </div>
-        <div class="row"><span class="label">Barangay</span>
+        <!-- <div class="row"><span class="label">Barangay</span>
           <span class="value">
             {{  isUserDto(item.farmer) ? item.farmer.address.barangay : '—'}}
           </span>
-        </div>
+        </div> -->
         <div class="row"><span class="label">Status</span><span class="value status {{item.status}}">{{item.status | titlecase}}</span></div>
 
         <div class="actions">
